# internet-of-streams

./: .gitmodules  .travis.yml  Cargo.toml  README.md  notes.md
hack/: Cargo.toml
hack/src/: clocks.rs  main.rs  rtc.rs
notes/: 2019-03-17.md  2019-03-31.md  alarm-clock.md
nrf52-hal-backports/: Cargo.toml
nrf52-hal-backports/src/: delay.rs  lib.rs
pocs/better-logging/: Cargo.toml  debug.gdb
pocs/better-logging/src/: main.rs
pocs/rtc-poc/: Cargo.toml  debug.gdb
pocs/rtc-poc/src/: main.rs
pocs/serial-client/: Cargo.toml
pocs/serial-client/src/: main.rs
pocs/sparkfun-7seg/: Cargo.toml  debug.gdb
pocs/sparkfun-7seg/src/: main.rs  spark_ser7seg.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
sensor-node/: Cargo.toml  debug.gdb
sensor-node/.cargo/: config
sensor-node/src/: dwm1001_local.rs  logger.rs  main.rs
spark-ser7seg/: Cargo.toml
spark-ser7seg/src/: lib.rs
uarte-logger/: Cargo.toml
uarte-logger/src/: lib.rs
uhr/: Cargo.toml  README.md
uhr/src/: lib.rs  uhr.rs  wecker.rs  winkel.rs
utils/: Cargo.toml
utils/src/: lib.rs
