[workspace]

members = [
    "sensor-node",
    "uarte-logger",

    # Proof of Concepts
    "pocs/rtc-poc",
    "pocs/better-logging",

    # Vendored Repos
    "vendor/cobs.rs",

    "uhr",
    "utils",
    "protocol",
    "nrf52-hal-backports",
]

exclude = [
    # Desktop applications
    "pocs/serial-client",
]

[profile.release]
opt-level = 3
debug = true
lto = true
incremental = false
codegen-units = 1

[patch.crates-io]
dw1000 = { path = './vendor/rust-dw1000' }
