[workspace]

members = [
    "sensor-node",
    "uarte-logger",

    # Proof of Concepts
    "pocs/rtc-poc",
    "pocs/sparkfun-7seg",

    "uhr",
    "utils",
    "protocol",
    "nrf52-hal-backports",
]

[profile.release]
opt-level = 's'
debug = true
lto = true
incremental = false
codegen-units = 1
