[package]
name = "protocol"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]

[dependencies.ssmarshal]
version       = "=1.0.0"
default-features = false

[dependencies.serde]
version = "=1.0.85"
default-features = false

[dependencies.serde_derive]
version = "=1.0.85"

[dependencies.nrf52832-hal]
version = "0.8"
default-features = false
