[package]
name = "sensor-node"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]
panic-halt      = "0.2.0"
nb              = "0.1.1"
cortex-m-rtfm   = "0.4.1"
nrf52832-pac    = "0.6.0"
cortex-m        = "0.5.8"

[dependencies.dwm1001]
version = "0.1.0"
features = [ "dev", "rt" ]

[dependencies.bbqueue]
version = "0.3.2"
features = ["cortex-m"]

[patch.crates-io.nrf52-hal-common]
path = "../vendor/nrf52-hal/nrf52-hal-common"
version = "0.7.0"
