[package]
name = "sensor-node"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]
panic-halt      = "0.2.0"
nb              = "0.1.1"
cortex-m-rtfm   = "0.4.1"
nrf52832-pac    = "0.6.0"
dw1000          = "0.1.0"
embedded-hal    = "0.2.2"

[dependencies.dwm1001]
version = "0.1.0"
features = [ "dev", "rt" ]
