[package]
name = "sensor-node"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]
panic-ramdump   = "0.1.1"
nb              = "0.1.2"
cortex-m-rtfm   = "0.4.3"
embedded-hal    = "0.2.2"
heapless        = "0.4.3"

[dependencies.ssmarshal]
version       = "=1.0.0"
default-features = false

[dependencies.dwm1001]
version = "0.2.0"
features = [ "dev", "rt" ]

# Local workspace deps

[dependencies.uarte-logger]
path = "../uarte-logger"

[dependencies.utils]
path = "../utils"

[dependencies.protocol]
path = "../protocol"
