[package]
name = "uarte-logger"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]
heapless = "0.4.2"

[dependencies.postcard]
version = "0.2.1"
# git = "https://github.com/jamesmunns/postcard"
# rev = "straight-to-cobs"
path = "/home/james/ferrous/derse/postcard"

[dependencies.cobs]
version = "0.1.4"
default-features = false

[dependencies.serde]
default-features = false
features = ["derive"]
version = "1.0.85"

[dependencies.nrf52832-hal]
version = "0.7"
default-features = false

[dependencies.protocol]
path = "../protocol"
